[FIX] filterbar's icon align with column

--- a/components/table/style/index.less
+++ b/components/table/style/index.less
@@ -176,13 +176,15 @@
   &-thead > tr > th.@{table-prefix-cls}-selection-column-custom {
     padding-left: 16px;
     padding-right: 0;
+    min-width: 62px !important;
+    width: 62px !important;
   }
 
   &-thead > tr > th.@{table-prefix-cls}-selection-column,
   &-tbody > tr > td.@{table-prefix-cls}-selection-column {
     text-align: center;
-    min-width: 62px;
-    width: 62px;
+    min-width: 20px;
+    width: 20px;
     .@{ant-prefix}-radio-wrapper {
       margin-right: 0;
     }
