--- a/components/table/style/size.less
+++ b/components/table/style/size.less
@@ -3,6 +3,7 @@
   > .@{table-prefix-cls}-footer {
     padding: @table-padding-vertical*3/2 @table-padding-horizontal*3/2;
   }
+
   > .@{table-prefix-cls}-content {
     > .@{table-prefix-cls}-header > table,
     > .@{table-prefix-cls}-body > table,
@@ -14,7 +15,7 @@
     > .@{table-prefix-cls}-fixed-right > .@{table-prefix-cls}-body-outer > .@{table-prefix-cls}-body-inner > table {
       > .@{table-prefix-cls}-thead > tr > th,
       > .@{table-prefix-cls}-tbody > tr > td {
-        padding: @table-padding-vertical*3/2 @table-padding-horizontal*3/2;
+        padding: @table-padding-vertical*3/2 @table-padding-horizontal;
       }
     }
   }
